# graphql-static-bac

./: .gitignore  Cargo.toml  README.md
config/lexicons/: .gitkeep  argument-classifier-indeed.json  argument-classifier-shopify.json  argument-classifier-swapcard.json  argument-classifier-v1.json
config/profiles/: .gitkeep  route-analysis-v1.json
docs/: README.md  architecture-overview.md  lexicon-argument-classifier.md  lexicon-authoring-guide.md  plan-cli-implement.md  plan-cli-simplification.md  plan-ux.md  static-pipeline-io.md
docs/design/: Oracle_design.md  pipeline.md  routeVerdict.md  s4_seed_finder.md  seedFinderPhases.md
docs/implementation/: overview.md  phase-2-seed-runtime.md  policy-violation-oracle.md  repository-layout.md  stage-0-ir.md  stage-2-argument-classifier.md  stage-3-definite-selectors-and-route-family-dag.md  stage-3-fix-abstract-automaton.md  stage-3-paths.md  stage-3-route-analysis-scalability.md  stage-3-route-analysis.md  stage-3-route-family-dag.md  stage-4-seed-plans.md
docs/reference/: graphql-path-enum.md  run-schema2.md
docs/research/: field-path-finder-research-prompt.md  phase-2-adaptive-scheduler-benchmark.md  phase-2-watchlist-calibration.md  prompt-announcement-notification-security.md  runtime-automation-research-prompt.md  runtime-cap-c-user-device.md  (+7 more)
scripts/: ansi2svg.py  build_watchlist_fixture.py
src/: embedded.rs  lib.rs  main.rs
tests/: cli.rs  contracts.rs  graph.rs  policy_oracle.rs  seed_contracts.rs  seed_correlation_demo.rs  seed_phase1_demo_parse.rs  seed_planner.rs  seed_runtime.rs  stages.rs
(+142 files in other folders)
