[package]
name = "graphql-static-bac"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Recall-first static GraphQL Broken Access Control analysis"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
graphql-parser = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[lib]
name = "graphql_static_bac"
path = "src/lib.rs"

[[bin]]
name = "graphql-static-bac"
path = "src/main.rs"

[[bin]]
name = "tophql"
path = "src/main.rs"
